# clai

./: .gitignore  Cargo.toml  api.js  clai.js  index.js  package.json
actions/: command.build.js  command.run.js  user.choice.js
src/: actions.rs  api.rs  main.rs
src/actions/: build.rs  choice.rs  clipboard.rs  command.rs  execute.rs  explain.rs  user.rs
