[package]
name = "clai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.116" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
console = "0.15"
